# Pokemon-Cpp-OOP

./: .gitignore  CMakeLists.txt  README.md  实验(综合-宠物小精灵)-面向对象程序设计与实践-2024春 发布版.doc
include/: database.h  level.h  skill.h  spirit.h  utils.h
include/Client/: Client.hpp  ClientHttpDriver.hpp
include/Database/: Database.hpp  SpiritDirver.hpp  SpiritDriver.hpp  UserDriver.hpp  WinDriver.hpp  database.hpp
include/Platform/: Combat.hpp  Platform.hpp  combat.hpp
include/Server/: Server.hpp
include/Spirit/: Description.hpp  Level.hpp  Property.hpp  Skill.hpp  Spirit.hpp  description.hpp  property.hpp  skill.hpp  spirit.hpp
include/User/: User.hpp  user.hpp
include/Utils/: SpiritUtils.hpp  Utils.hpp  utils.hpp
src/: Main.cpp
src/Database/: Database.cpp  SpiritDriver.cpp  UserDriver.cpp  WinDriver.cpp
src/Platform/: Combat.cpp  Platform.cpp
src/Server/: Server.cpp
src/Spirit/: Description.cpp  Level.cpp  Primeape.cpp  Property.cpp  Skill.cpp  Spirit.cpp
src/User/: User.cpp
src/Utils/: Utils.cpp
